<resources>
    <string name="app_name">Know News</string>
    <string name="no_connection">Please check your internet connection!</string>
    <string name="no_data">No data found, sorry…</string>

    <!--settings activity strings-->

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Settings</string>

    <string name="settings_section_label">Section</string>
    <string name="settings_section_key" translatable="false">section</string>
    <string name="settings_section_default" translatable="false">world</string>

    <string name="settings_choose_stage_label">Stage</string>
    <string name="settings_choose_stage_value">stage</string>

    <string name="settings_choose_sport_label">Sport</string>
    <string name="settings_choose_sport_value">sport</string>

    <string name="settings_choose_art_label">Art and Design</string>
    <string name="settings_choose_art_value">artanddesign</string>

    <string name="settings_choose_music">music</string>
    <string name="settings_choose_books">books</string>
    <string name="settings_choose_culture">culture</string>
    <string name="settings_choose_education">education</string>
    <string name="settings_choose_environment">environment</string>
    <string name="settings_choose_film">film</string>



    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">Most Recent</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>


</resources>
