<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <PreferenceCategory
        android:title="@string/settings_section_label">

        <CheckBoxPreference
            android:defaultValue="@string/settings_section_default"
            android:key="@string/settings_choose_stage_value"
            android:capitalize="words"
            android:selectAllOnFocus="true"
            android:title="@string/settings_choose_stage_label"
            android:summary="@string/settings_choose_stage_label"/>

        <CheckBoxPreference
            android:defaultValue="@string/settings_section_default"
            android:key="@string/settings_choose_sport_value"
            android:capitalize="words"
            android:selectAllOnFocus="true"
            android:title="@string/settings_choose_sport_label"
            android:summary="@string/settings_choose_sport_label"/>

        <CheckBoxPreference
            android:defaultValue="@string/settings_section_default"
            android:key="@string/settings_choose_art_value"
            android:capitalize="words"
            android:selectAllOnFocus="true"
            android:title="@string/settings_choose_art_label"
            android:summary="@string/settings_choose_art_label"/>

    </PreferenceCategory>



</PreferenceScreen>